# advent-of-code-2025

./: .envrc  .gitignore  Cargo.toml
src/: day01.rs  day01_fast.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  lib.rs  main.rs
