[package]
name = "advent-of-code-2025"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
http-cache-surf = "0.15.0"
indicatif = "0.18.3"
itertools = "0.14.0"
smol = "2.0.2"
surf = "2.3.2"

# ferris-elf
ahash = "0.8"
arrayvec = "0.7"
atoi = "2"
atoi_radix10 = { git = "https://github.com/gilescope/atoi_radix10" }
atoi_simd = "0.16"
bitvec = "1"
bit-set = "0.8"
bstr = "1"
btoi = "0.4"
bytemuck = { version = "1", features = ["must_cast", "nightly_portable_simd", "derive"] }
car = "0.1"
# core_simd = { git = "https://github.com/rust-lang/portable-simd" }
dashmap = "6"
fancy-regex = "0.14"
flume = "0.11"
glam = { version = "0.29", features = ["approx", "bytemuck", "rand", "serde", "mint"] }
# itertools = "0.13"
foldhash = "0.1"
memchr = "2"
mimalloc = { version = "0.1", default-features = false }
ndarray = "0.16"
nom = "7"
nom_locate = "4.2"
num = "0.4"
num-traits = "0.2"
parse-display = "0.10"
paste = "1.0.15"
pathfinding = "4"
pollster = "0.4"
radsort = "0.1"
rangemap = "1"
rayon = "1"
regex = "1"
roots = "0.0.8"
rustc-hash = { version = "2.1", features = ["nightly"] }
smallvec = "1"
t1ha = "0.1"
vek = "0.17.2"
ordered-float = "5.1.0"
petgraph = "0.8.3"
rstar = "0.12"
geo = "0.29"
good_lp = { version = "1.14", default-features = false, features = ["coin_cbc"] }
#wgpu = "0.18"
